# microhone

./: .gitignore  README.md  microhone-plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  receiver.rs  setup.rs
apps/mobile/: README.md  build.gradle.kts  settings.gradle.kts
apps/mobile/app/: build.gradle.kts  proguard-rules.pro
apps/mobile/app/src/main/: AndroidManifest.xml
apps/mobile/app/src/main/java/com/microhone/app/: MainActivity.kt  QrScanner.kt
apps/mobile/app/src/main/java/com/microhone/app/audio/: AudioEngine.kt  AudioStreamer.kt
apps/mobile/app/src/main/java/com/microhone/app/net/: DeviceDiscovery.kt
apps/mobile/app/src/main/java/com/microhone/app/service/: MicForegroundService.kt
apps/mobile/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_stat_mic.xml
apps/mobile/app/src/main/res/values/: strings.xml  themes.xml
apps/mobile/gradle/: libs.versions.toml
apps/site/: .gitignore  package.json
apps/site/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
apps/site/app/components/: card-visuals.tsx  hero-visual.tsx  reveal.tsx
apps/site/app/download/[platform]/: route.ts
tools/audio-poc/: Cargo.toml  README.md
tools/audio-poc/src/: main.rs
