[package]
name = "microhone-desktop"
version = "0.1.1"
description = "microhone — virtual microphone host"
authors = ["microhone"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
name = "microhone_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
magnum-opus = "0.3"
mdns-sd = "0.13"
gethostname = "0.5"
aes-gcm = "0.10"
qrcode = "0.14"
rand = "0.8"
base64 = "0.22"
